Wireframe overlay doesn't work as expected (does not hide edges of coplanar faces) #90641

Closed
opened 2021-08-12 20:37:32 +02:00 by Yegor · 17 comments

System Information
Operating system: Linux-5.4.0-80-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-10 21:06, hash: fcd2d63b64
Worked: 2.79 sort of

Short description of error
Wireframe = 0 should hide all the coplanar edges, but doesn't do that.
While it does something to the monkey and the quad cube, it fails on the triangulated cube and does nothing to the cap of the cylinder (hide one edge only).
2.79 didn't have the angle threshold, but it used to hide coplanar edges at least.

There is an explanation of the problem on devtalk as well.

Exact steps for others to reproduce the error

  • Open .blend file
  • From overlays panel change the Wireframe value to 0.

2021-08-12_20-56-02.mp4

Test File:

wireframe_bug.blend

**System Information** Operating system: Linux-5.4.0-80-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-10 21:06, hash: `fcd2d63b64` Worked: 2.79 sort of **Short description of error** Wireframe = 0 should hide all the coplanar edges, but doesn't do that. While it does something to the monkey and the quad cube, it fails on the triangulated cube and does nothing to the cap of the cylinder (hide one edge only). 2.79 didn't have the angle threshold, but it used to hide coplanar edges at least. There is an explanation of the problem on [devtalk ](https://devtalk.blender.org/t/blender-2-8-wireframes-discussion/666/408?u=1d_inc) as well. **Exact steps for others to reproduce the error** - Open .blend file - From overlays panel change the Wireframe value to 0. [2021-08-12_20-56-02.mp4](https://archive.blender.org/developer/F10278839/2021-08-12_20-56-02.mp4) Test File: [wireframe_bug.blend](https://archive.blender.org/developer/F10278841/wireframe_bug.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

#95994 was marked as duplicate of this issue

#95994 was marked as duplicate of this issue

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @1D_Inc

Added subscriber: @1D_Inc

Aw, it also brings random result...
Didn't caught it, thanks.

Aw, it also brings random result... Didn't caught it, thanks.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Switching triangulation back and forth sometimes lead to different wireframe overlay results.

Can confirm. The issue described related to decimate modifier has been introduced recently somewhere between: ef5a362a5b - 7b0c8097a7.

Wireframe = 0 should hide all the coplanar edges, but doesn't do that.

Seems different than the decimate modifier issue. I will create a separate report for the first issue

>Switching triangulation back and forth sometimes lead to different wireframe overlay results. Can confirm. The issue described related to decimate modifier has been introduced recently somewhere between: ef5a362a5b - 7b0c8097a7. >Wireframe = 0 should hide all the coplanar edges, but doesn't do that. Seems different than the decimate modifier issue. I will create a separate report for the first issue

In #90641#1205949, @PratikPB2123 wrote:

Wireframe = 0 should hide all the coplanar edges, but doesn't do that.

Seems different than the decimate modifier issue. I will create a separate report for the first issue

I am not sure Wireframe = 0 should hide all coplanar faces. It should be at 0.99...

Also Object properties - Viewport display - Wireframe checkbox should exclude coplanar edges topology, unless All Edges is not turned on.
That was the original goal of an All Edges checkbox, now its functionality is lost. (also... diagonal edges?)

Wire cycle.mp4

Also, this 0-1 scale is weird, it is probably way more logical to make it 0-180 degrees,
the same Autosmooth already have (0 = every edge is visible, 180 = every edge is hidden )
This way it will make possible a wider range of a visual wireframe display effects,
the ability to visually sync to Autosmooth, and overall better precise control as well.
How do you think?

WW.mp4

> In #90641#1205949, @PratikPB2123 wrote: >>Wireframe = 0 should hide all the coplanar edges, but doesn't do that. > Seems different than the decimate modifier issue. I will create a separate report for the first issue I am not sure Wireframe = 0 should hide all coplanar faces. It should be at 0.99... Also **Object properties - Viewport display - Wireframe checkbox** should exclude coplanar edges topology, unless **All Edges** is not turned on. That was the original goal of an **All Edges** checkbox, now its functionality is lost. (also... diagonal edges?) [Wire cycle.mp4](https://archive.blender.org/developer/F10279435/Wire_cycle.mp4) Also, this 0-1 scale is weird, it is probably way more logical to make it 0-180 degrees, the same Autosmooth already have (0 = every edge is visible, 180 = every edge is hidden ) This way it will make possible a wider range of a visual wireframe display effects, the ability to visually sync to Autosmooth, and overall better precise control as well. How do you think? [WW.mp4](https://archive.blender.org/developer/F10279409/WW.mp4)
Author

In #90641#1205949, @PratikPB2123 wrote:

Switching triangulation back and forth sometimes lead to different wireframe overlay results.

Can confirm. The issue described related to decimate modifier has been introduced recently somewhere between: ef5a362a5b - 7b0c8097a7.

Wireframe = 0 should hide all the coplanar edges, but doesn't do that.

Seems different than the decimate modifier issue. I will create a separate report for the first issue

This report is mainly about hiding coplanar edges. I'd rather report the decimation separately.

> In #90641#1205949, @PratikPB2123 wrote: >>Switching triangulation back and forth sometimes lead to different wireframe overlay results. > Can confirm. The issue described related to decimate modifier has been introduced recently somewhere between: ef5a362a5b - 7b0c8097a7. > >>Wireframe = 0 should hide all the coplanar edges, but doesn't do that. > Seems different than the decimate modifier issue. I will create a separate report for the first issue This report is mainly about hiding coplanar edges. I'd rather report the decimation separately.

Added subscriber: @APEC

Added subscriber: @APEC
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

There is a point to this and if I read this correctly (including statements in the devtalk thread), devs were considering options to make this better?

I talked about this problem in blender chat and after some words developers saw that the problem was the fresnel and promise the patch for blender 3.0 to make optional

So would kindly ask #eevee_viewport to take over and make a decision.

There is a point to this and if I read this correctly (including statements in the devtalk thread), devs were considering options to make this better? > I talked about this problem in blender chat and after some words developers saw that the problem was the fresnel and promise the patch for blender 3.0 to make optional So would kindly ask #eevee_viewport to take over and make a decision.

In #90641#1227131, @lichtwerk wrote:
There is a point to this and if I read this correctly (including statements in the devtalk thread), devs were considering options to make this better?

I talked about this problem in blender chat and after some words developers saw that the problem was the fresnel and promise the patch for blender 3.0 to make optional

So would kindly ask #eevee_viewport to take over and make a decision.

  • The wireframe fresnel effect is about visual effects that makes model less readable/perceptable in the most cases. It is in progress (D10436)

  • This report is about completely broken coplanar faces detection controlled by angle parameter that does not even display, represent or correspond degress properly.

> In #90641#1227131, @lichtwerk wrote: > There is a point to this and if I read this correctly (including statements in the devtalk thread), devs were considering options to make this better? > >> I talked about this problem in blender chat and after some words developers saw that the problem was the fresnel and promise the patch for blender 3.0 to make optional > > So would kindly ask #eevee_viewport to take over and make a decision. - The wireframe fresnel effect is about visual effects that makes model less readable/perceptable in the most cases. It is in progress ([D10436](https://archive.blender.org/developer/D10436)) - This report is about completely broken coplanar faces detection controlled by angle parameter that does not even display, represent or correspond degress properly.

Added subscriber: @Michael-Drake

Added subscriber: @Michael-Drake
Philipp Oeser changed title from Wireframe overlay doesn't work as expected to Wireframe overlay doesn't work as expected (does not hide edges of coplanar faces) 2022-04-27 16:01:25 +02:00
Member

Added subscribers: @Hazooka, @OmarEmaraDev

Added subscribers: @Hazooka, @OmarEmaraDev
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:13:22 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-04-03 16:22:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90641
No description provided.